--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,32 @@
-body {
+*,
+::before,
+::after {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap");
+html {
+  font-family: "Inter", Sans-Serif;
+}
+
+:root {
+  --color-shadow: rgba(0, 0, 0, 0.1);
+  --color-shadow-light: rgba(0, 0, 0, 0.06);
+  --color-light-blue: #c3e8e8;
+  --color-button: #27acac;
+  --color-button-hover: #1e8888;
+  --color-warning: #dd8a8a;
+}
+.container {
+  width: 100%;
+  padding: 5rem calc(1.5rem * 0.5);
+  margin: 0 auto;
+}
+@media only screen and (min-width: 36rem) {
+  .container {
+    max-width: 50rem;
+    padding: 5rem calc(2rem * 0.5);
+  }
 }
